force-app/main/default/objects/IP__c/IP__c.object-meta.xml
<CustomObject>
    <description>[Technology Transfer Starter] IP is the object within Salesforce which holds the shared information about the Technology Disclosure and Intellectual Property (IP).</description>
    <label>IP</label>
    <nameField>
        <displayFormat>IP{000000}</displayFormat>
        <label>IP Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>