force-app/main/default/objects/IP__c/fields/IP_Category__c.field-meta.xml
<CustomField>
    <fullName>IP_Category__c</fullName>
    <inlineHelpText>Category of IP</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Composition of Matter</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Improvement</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>