force-app/main/default/objects/IP__c/fields/IP_Commercial_Market__c.field-meta.xml
<CustomField>
    <fullName>IP_Commercial_Market__c</fullName>
    <description>Details of the commercial market approach and plan.</description>
    <inlineHelpText>Details of the commercial market approach and plan.</inlineHelpText>
    <label>Commercial Market</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>