force-app/main/default/objects/IP__c/fields/IP_Compact_Title__c.field-meta.xml
<CustomField>
    <fullName>IP_Compact_Title__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp;  IP_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Compact Title</label>
    <type>Text</type>
</CustomField>