force-app/main/default/objects/IP__c/fields/IP_Disclosure_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Disclosure_Date__c</fullName>
    <description>Date which the initial disclosure of IP was disclosed/created.</description>
    <inlineHelpText>Date which the initial disclosure of IP was disclosed/created.</inlineHelpText>
    <label>Disclosure Date</label>
    <type>Date</type>
</CustomField>