force-app/main/default/objects/IP__c/fields/IP_Experimental_Verification__c.field-meta.xml
<CustomField>
    <fullName>IP_Experimental_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms that experimental verification has taken place to verify the IP</description>
    <inlineHelpText>Has the IP been tested and verified through experimental verification? Check this check box if yes.</inlineHelpText>
    <label>Experimental Verification</label>
    <type>Checkbox</type>
</CustomField>