force-app/main/default/objects/IP__c/fields/IP_Experimental_Verification_Detail__c.field-meta.xml
<CustomField>
    <fullName>IP_Experimental_Verification_Detail__c</fullName>
    <label>Experimental Verification Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>