force-app/main/default/objects/IP__c/fields/IP_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_External_Reference__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>If details of the IP are stored in an external system to Salesforce, then please add the UNIQUE reference here for the related record in the external system.</inlineHelpText>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>