force-app/main/default/objects/IP__c/fields/IP_Future_Publications__c.field-meta.xml
<CustomField>
    <fullName>IP_Future_Publications__c</fullName>
    <label>Future Publications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>