force-app/main/default/objects/IP__c/fields/IP_Known_Limitations__c.field-meta.xml
<CustomField>
    <fullName>IP_Known_Limitations__c</fullName>
    <inlineHelpText>What are the disadvantages or limitations of this Intellectual Property? Can these be solved? How?</inlineHelpText>
    <label>Known Limitations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>