force-app/main/default/objects/IP__c/fields/IP_Known_Risks__c.field-meta.xml
<CustomField>
    <fullName>IP_Known_Risks__c</fullName>
    <inlineHelpText>Identify and explain the risks (technological or otherwise) that could jeopardise the commercialisation of this Intellectual Property.  Describe the greatest impediment to the adoption of your Intellectual Property.</inlineHelpText>
    <label>Known Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>