force-app/main/default/objects/IP__c/fields/IP_Known_Variations__c.field-meta.xml
<CustomField>
    <fullName>IP_Known_Variations__c</fullName>
    <inlineHelpText>Are there any possible variations of this IP?</inlineHelpText>
    <label>Known Variations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>