force-app/main/default/objects/IP__c/fields/IP_Materials__c.field-meta.xml
<CustomField>
    <fullName>IP_Materials__c</fullName>
    <inlineHelpText>Details of materials used, particularly those provided from another source outside of research organisation.</inlineHelpText>
    <label>Materials Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>