force-app/main/default/objects/IP__c/fields/IP_Novelty__c.field-meta.xml
<CustomField>
    <fullName>IP_Novelty__c</fullName>
    <inlineHelpText>How does this Intellectual Property differ from existing technologies and current practices? What are its advantages and what problems does it solve?</inlineHelpText>
    <label>IP Novelty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>