force-app/main/default/objects/IP__c/fields/IP_ParentIP__c.field-meta.xml
<CustomField>
    <fullName>IP_ParentIP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent IP</inlineHelpText>
    <label>Parent IP</label>
    <referenceTo>IP__c</referenceTo>
    <relationshipLabel>Related IP</relationshipLabel>
    <relationshipName>Child_IP</relationshipName>
    <type>Lookup</type>
</CustomField>