force-app/main/default/objects/IP__c/fields/IP_Principal_Inventor_PI__c.field-meta.xml
<CustomField>
    <fullName>IP_Principal_Inventor_PI__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is an auto-populated field, based on the Inventor assigned as the Primary inventor from the related Inventor list.</inlineHelpText>
    <label>Principal Inventor (PI)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Technology</relationshipLabel>
    <relationshipName>IP_PI_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>