force-app/main/default/objects/IP__c/fields/IP_Prior_Art__c.field-meta.xml
<CustomField>
    <fullName>IP_Prior_Art__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you aware of any inventions or publications by others that are related to this Intellectual Property? Check the checkbox if yes.</inlineHelpText>
    <label>Prior Art</label>
    <type>Checkbox</type>
</CustomField>