force-app/main/default/objects/IP__c/fields/IP_Prior_Art_detail__c.field-meta.xml
<CustomField>
    <fullName>IP_Prior_Art_detail__c</fullName>
    <inlineHelpText>Are you aware of any inventions or publications by others that are related to this Intellectual Property?</inlineHelpText>
    <label>Prior Art Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>