force-app/main/default/objects/IP__c/fields/IP_Public_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>IP_Public_Disclosure__c</fullName>
    <inlineHelpText>Date which IP was initially disclosed to the Public</inlineHelpText>
    <label>Public Disclosure Date</label>
    <type>Date</type>
</CustomField>