force-app/main/default/objects/IP__c/fields/IP_Public_Disclosure_Details__c.field-meta.xml
<CustomField>
    <fullName>IP_Public_Disclosure_Details__c</fullName>
    <label>Public Disclosure Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>