force-app/main/default/objects/IP__c/fields/IP_Sponsored_Program__c.field-meta.xml
<CustomField>
    <fullName>IP_Sponsored_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the Intellectual Property conceived within the scope of a sponsored program?</inlineHelpText>
    <label>Sponsored Program</label>
    <type>Checkbox</type>
</CustomField>