force-app/main/default/objects/IP__c/fields/IP_Sponsored_Program_Detail__c.field-meta.xml
<CustomField>
    <fullName>IP_Sponsored_Program_Detail__c</fullName>
    <inlineHelpText>Details of Sponsorship</inlineHelpText>
    <label>Sponsored Program Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>