force-app/main/default/objects/IP__c/fields/IP_Status__c.field-meta.xml
<CustomField>
    <fullName>IP_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Initial Disclosure</fullName>
                <default>true</default>
                <label>Initial Disclosure</label>
            </value>
            <value>
                <fullName>Disclosure Review</fullName>
            </value>
            <value>
                <fullName>Pre-Filing</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Triage</fullName>
            </value>
            <value>
                <fullName>Commercialisation</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
            <value>
                <fullName>Closed - Won</fullName>
            </value>
            <value>
                <fullName>TRL 2</fullName>
                <isActive>false</isActive>
                <label>TRL 2</label>
            </value>
            <value>
                <fullName>TRL 3</fullName>
                <isActive>false</isActive>
                <label>TRL 3</label>
            </value>
            <value>
                <fullName>TRL 4</fullName>
                <isActive>false</isActive>
                <label>TRL 4</label>
            </value>
            <value>
                <fullName>TRL 5</fullName>
                <isActive>false</isActive>
                <label>TRL 5</label>
            </value>
            <value>
                <fullName>TRL 6</fullName>
                <isActive>false</isActive>
                <label>TRL 6</label>
            </value>
            <value>
                <fullName>TRL 7</fullName>
                <isActive>false</isActive>
                <label>TRL 7</label>
            </value>
            <value>
                <fullName>TRL 8</fullName>
                <isActive>false</isActive>
                <label>TRL 8</label>
            </value>
            <value>
                <fullName>TRL 9</fullName>
                <isActive>false</isActive>
                <label>TRL 9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>