force-app/main/default/objects/IP__c/fields/IP_Technical_Description__c.field-meta.xml
<CustomField>
    <fullName>IP_Technical_Description__c</fullName>
    <inlineHelpText>Provide a brief description of the Intellectual Property</inlineHelpText>
    <label>Technical Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>