force-app/main/default/objects/IP__c/fields/IP_Title__c.field-meta.xml
<CustomField>
    <fullName>IP_Title__c</fullName>
    <inlineHelpText>Short title for Technology</inlineHelpText>
    <label>Technology Title</label>
    <type>TextArea</type>
</CustomField>