force-app/main/default/objects/IP__c/fields/IP_Total_Percentage_Share__c.field-meta.xml
<CustomField>
    <fullName>IP_Total_Percentage_Share__c</fullName>
    <description>This is used primarily for validation of the child contribution records to ensure that the overall share is not more than 100%</description>
    <inlineHelpText>Total percentage share of all contributions related to this IP.</inlineHelpText>
    <label>Total Percentage Share</label>
    <summarizedField>IP_Inventor__c.Percentage_Share__c</summarizedField>
    <summaryFilterItems>
        <field>IP_Inventor__c.Percentage_Share__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_Inventor__c.IP_Contribution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>