force-app/main/default/objects/IP__c/fields/IP_Total_Primary_Contributions__c.field-meta.xml
<CustomField>
    <fullName>IP_Total_Primary_Contributions__c</fullName>
    <description>This checks the number of child contributions records, marked as primary, is always 1 or 0. If this is greater than one a validation rule throws an error message.</description>
    <inlineHelpText>Total number of contributions marked as Primary. This should always be 1.</inlineHelpText>
    <label>Total Primary Contributions</label>
    <summaryFilterItems>
        <field>IP_Inventor__c.IP_Is_Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_Inventor__c.IP_Contribution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>