force-app/main/default/objects/IP__c/fields/IP_Utility__c.field-meta.xml
<CustomField>
    <fullName>IP_Utility__c</fullName>
    <inlineHelpText>What are possible uses or applications of this Intellectual Property? In addition to direct applications, are there any other uses that might be realised in the future?</inlineHelpText>
    <label>IP Utility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>