force-app/main/default/objects/IP__c/fields/Non_Confidential_Description__c.field-meta.xml
<CustomField>
    <fullName>Non_Confidential_Description__c</fullName>
    <inlineHelpText>Description of IP which can be used in external publications.</inlineHelpText>
    <label>Non-Confidential Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>