force-app/main/default/objects/IP__c/fields/Trademark_Classes__c.field-meta.xml
<CustomField>
    <fullName>Trademark_Classes__c</fullName>
    <description>The Nice Classification (NCL), established by the Nice Agreement (1957), is an international classification of goods and services applied for the registration of marks.</description>
    <label>Trademark Classes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WIPO_NCL_Classes</valueSetName>
    </valueSet>
</CustomField>