force-app/main/default/objects/IP__c/fields/TRL__c.field-meta.xml
<CustomField>
    <fullName>TRL__c</fullName>
    <inlineHelpText>Technology Readiness Level (TRL)</inlineHelpText>
    <label>TRL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRL 1</fullName>
            </value>
            <value>
                <fullName>TRL 2</fullName>
            </value>
            <value>
                <fullName>TRL 3</fullName>
            </value>
            <value>
                <fullName>TRL 4</fullName>
            </value>
            <value>
                <fullName>TRL 5</fullName>
            </value>
            <value>
                <fullName>TRL 6</fullName>
            </value>
            <value>
                <fullName>TRL 7</fullName>
            </value>
            <value>
                <fullName>TRL 8</fullName>
            </value>
            <value>
                <fullName>TRL 9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>